@@ -1,6 +1,9 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2007, PHP 5.2.1
+- cgi.* and fastcgi.* directives are moved to INI subsystem.
+  The new directive cgi.check_shebang_line can be used to ommiting checnk
+  for "#! /usr/bin/php" line. (Dmitry).
 - Windows related optimizations (Dmitry, Stas)
   . removed unnecessary checks for ISREG file and corresponding stat() calls
   . opendir() is reimplemented using GetFistFile/GetNextFile those are faster
